Make JRE works